Pulling surefire up to top level pom