@@ -95,22 +95,4 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-	<reporting>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>${global_surefire_version}</version>
-				<configuration>
-					<argLine>-Xmx2048m -XX:MaxPermSize=256m</argLine>
-					<systemProperties>
-						<property>
-							<name>mode</name>
-							<value>local</value>
-						</property>
-					</systemProperties>
-				</configuration>
-			</plugin>
-		</plugins>
-	</reporting>
 </project>
